--- a/HappyCoding.Calculator/HappyCoding.Calculator.Win/HappyCoding.Calculator.Win.csproj
+++ b/HappyCoding.Calculator/HappyCoding.Calculator.Win/HappyCoding.Calculator.Win.csproj
@@ -4,6 +4,10 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <ApplicationIcon>calculator.ico</ApplicationIcon>
+    <Company>Markus Meyer</Company>
+    <PackageIcon>calculator.ico</PackageIcon>
+    <PackageIconUrl />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -18,6 +22,10 @@
 
   <ItemGroup>
     <None Remove="stylecop.json" />
+    <None Include="calculator.ico">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
